[package]
name = "blender"
version = "0.0.0"
authors = ["Lorenzo Fontoura <lorenzo@nioel.com>"]
edition = "2018"
description = "blender"
repository = "https://github.com/rellfy/blender"
homepage = "https://github.com/rellfy/blender"
license = "MIT"
readme = "README.md"

[dependencies]
tokio = { version = "1.0.1", features = ["full"] }
futures = "0.3.8"
pin-project = "1.0.2"
